GDHI-UI Sorted country list, Fixed issue of accordion collapsing in indicator page <Mark>

--- a/src/assets/stylesheets/components/indicator-info/indicator-info.scss
+++ b/src/assets/stylesheets/components/indicator-info/indicator-info.scss
@@ -9,6 +9,7 @@
 
 .indicators {
   // margin-left: 33.33%; 
+  width: 100%;
   .row {
     @media screen and (max-width: 1024px) {
       flex-wrap: nowrap;
